# testcase-generator

./: .dockerignore  .dockerignore.dev  .dockerignore.mkdocs  .env.docker  .env.example  .env.sh  .gitignore  .gitlab-ci.yml  .projector-config  .projector-path  .projector.yml  ACCEPTANCE_SUITE_FIXES_IMPLEMENTATION.md  ACCEPTANCE_SUITE_STATE.md  ACCEPTANCE_SUITE_SUCCESS_TESTS_RUN.md  ACCEPTANCE_TEST_MAKEFILE.md  AGENTS.md  AUDIT_IMPLEMENTATION_SUMMARY.md  AUDIT_LOGGING.md  AUDIT_QUICK_START.md  AUDIT_TRACEABILITY_GUIDE.md  AUDIT_TRACEABILITY_QUICKREF.md  AUDIT_TRACEABILITY_SUMMARY.md  BASH_32_COMPATIBILITY_UPDATE.md  CAMPAIGN_IMPLEMENTATION_SUMMARY.md  CAMPAIGN_MAKEFILE_INTEGRATION.md  CANONICAL_PATHS_UPDATE_SUMMARY.md  CHANGELOG_DEPENDENCIES_PREREQUISITES_COMPLEX.md  CI_CD_PYTHON_314_MIGRATION.md  CI_CD_PYTHON_QUICK_REFERENCE.md  CODE_REVIEW_TCMS-8.md  CONSOLIDATION_CHANGES.md  CONTAINER_SCHEMA_CONSOLIDATION.md  CONTAINER_YAML_COMPATIBILITY_IMPLEMENTATION.md  CROSS_PLATFORM_TESTS_SUMMARY.md  Cargo.toml  DETAILED_VALIDATION_QUICK_REFERENCE.md  DOCKER_BUILD_INSTRUCTIONS.md  DOCKER_CLEANUP_IMPLEMENTATION_COMPLETE.md  DOCKER_CLEANUP_SUMMARY.md  DOCKER_CLEANUP_TEST_CHECKLIST.md  (+163 more)
.cargo/: config.toml
crates/audit-traceability/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/audit-traceability/src/: lib.rs
crates/audit-verifier/: Cargo.toml  README.md  TESTING.md
crates/audit-verifier/src/: audit_log.rs  audit_signer.rs  lib.rs  main.rs  signing.rs  verify_signature.rs
crates/audit-verifier/tests/: IMPLEMENTATION_SUMMARY.md  README.md  run_all_tests.sh
crates/audit-verifier/tests/integration/: test_audit_key_scenarios.sh  test_audit_verifier_e2e.sh  test_simple_workflow.sh
crates/audit-verifier/tests/sample/: README.md  sample_test_case.yaml
crates/editor/: Cargo.toml
crates/req-coverage/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS.md  INTEGRATION_TEST_SETUP.md  QUICK_START.md  README.md  SAMPLE_REPORT.md  TESTING.md  generate_sample_report.sh  run_integration_tests.sh  sample_coverage_report.html
crates/req-coverage/integration-tests/: .gitignore  README.md  run_integration_tests.sh
crates/req-coverage/src/: coverage.rs  html.rs  lib.rs  main.rs  models.rs  report.rs
crates/req-coverage/templates/: default_report.html  requirements.example.json  requirements.example.yaml
crates/req-coverage/tests/: README.md  simple_test.rs  string_verification_tests.rs
crates/req-coverage/tests/integration/: .gitignore  README.md  test_runner.sh
crates/script-cleanup/: Cargo.toml
crates/script-cleanup/src/: main.rs
crates/test-executor/: Cargo.toml
crates/test-executor/src/: main.rs
crates/test-orchestrator/: Cargo.toml
crates/test-orchestrator/src/: main.rs
crates/test-run-manager/: Cargo.toml
crates/test-run-manager/src/: main.rs
crates/test-verify/: Cargo.toml
crates/test-verify/src/: main.rs
crates/testcase-common/: Cargo.toml
crates/testcase-common/src/: config.rs  envelope.rs  lib.rs  yaml_loader.rs
crates/testcase-execution/: Cargo.toml
crates/testcase-execution/src/: audit.rs  bdd_parser.rs  executor.rs  lib.rs
crates/testcase-manager/: Cargo.toml  test-acceptance
crates/testcase-manager/examples/: EXAMPLE_RUN_ALL_A.yml  EXAMPLE_RUN_ALL_B.yml  TEST_ORCHESTRATOR_EXAMPLES.md  interactive_workflow.rs  test_verify_demo.rs  test_verify_integration.rs  tty_fallback_demo.rs
crates/testcase-manager/examples/config/: container_config.yml  container_config_ci.yml  container_config_full.yml  testcase-manager-config.toml
crates/testcase-manager/examples/manual_steps_scripts/: README.md  TC_MANUAL_API_007.sh  TC_MANUAL_DEVICE_004.sh  TC_MANUAL_NETWORK_005.sh  TC_MANUAL_SECURITY_008.sh
crates/testcase-manager/examples/variables/: simple_variable_example.yml
crates/testcase-manager/src/: builder.rs  complex_structure_editor.rs  config.rs  creator.rs  database.rs  dependency_resolver.rs  editor.rs  executor.rs  junit_xml_validator.rs  lib.rs  main_editor.rs  orchestrator.rs  parser.rs  prompts.rs  sample.rs  sample_extensions.rs  storage.rs  validation.rs  verification.rs  verification_templates.rs
crates/testcase-manager/tests/: README.md  batch_verification_test.rs  bdd_step_definitions_test.rs  complex_structure_editor_test.rs  container_schema_validation_test.rs  data_files_validation.rs  dependencies_test.rs  dependency_resolver_integration_test.rs  executor_json_log_test.rs  executor_test.rs  general_verification_test.rs  hooks_test.rs  hydration_test.rs  integration_test.rs  jq_json_escaping_test.rs  json_escape_integration_test.rs  json_escape_test.rs  log_cleaner_test.rs  manual_filter_test.rs  models_test.rs  multiline_descriptions_e2e_test.rs  oracle_integration.rs  report_generation_e2e_test.rs  schema_validation_test.rs  script_generation_acceptance_test.rs  test_run_storage_test.rs  validation_scenarios.rs  variables_capture_test.rs  verification_edge_cases_test.rs  verification_metadata_test.rs  verification_test.rs  verifier_cli_test.rs
crates/testcase-orchestration/: Cargo.toml
crates/testcase-orchestration/src/: lib.rs
crates/testcase-storage/: Cargo.toml
crates/testcase-storage/src/: database.rs  lib.rs  recovery.rs  sample.rs  test_run_storage.rs
crates/testcase-ui/: Cargo.toml
crates/testcase-ui/src/: builder.rs  complex_structure_editor.rs  creator.rs  editor.rs  fuzzy.rs  git.rs  lib.rs  oracle.rs  prompts.rs  recovery_extensions.rs  ui.rs  validation.rs
crates/testcase-validation/: Cargo.toml
crates/testcase-validation/src/: dependency_resolver.rs  dependency_validator.rs  junit_xml_validator.rs  lib.rs
crates/testcase-verification/: Cargo.toml
crates/testcase-verification/src/: lib.rs  log_cleaner.rs  verification.rs
crates/tpdg-compat/: Cargo.toml
crates/validate-json/: Cargo.toml
crates/validate-json/src/: main.rs
crates/validate-yaml/: Cargo.toml
crates/validate-yaml/src/: lib.rs  main.rs
crates/validate-yaml/tests/: integration_test.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: main.rs
crates/verifier/tests/: integration_test.rs
mk/: python.mk  (+3 more)
(+1302 files in other folders)
