[package]
name = "testcase-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "*"
skim = "0.10"
dialoguer = "0.11"
edit = "0.1"
git2 = "0.18"
jsonschema = "0.17"
anyhow = "=1.0.99"
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.1", features = ["serde"] }
dotenvy = "0.15"
tempfile = "3.8"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
regex = "1.10"
colored = "2.1"
similar = "2.3"
quick-xml = "0.39.0"
roxmltree = "0.20"

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.20"

[[bin]]
name = "validate-yaml"
path = "src/bin/validate-yaml.rs"

[[bin]]
name = "validate-json"
path = "src/bin/validate-json.rs"

[[bin]]
name = "trm"
path = "src/bin/test-run-manager.rs"

[[bin]]
name = "test-verify"
path = "src/bin/test-verify.rs"

[[bin]]
name = "test-executor"
path = "src/bin/test-executor.rs"

## TODO AGB: Remove duplicate binary names - Backward compatibility for now
[[bin]]
name = "testcase-manager"
path = "src/main_editor.rs"

[[bin]]
name = "editor"
path = "src/main_editor.rs"

[[bin]]
name = "test-orchestrator"
path = "src/bin/test-orchestrator.rs"

[[example]]
name = "tty_fallback_demo"
path = "examples/tty_fallback_demo.rs"

[[example]]
name = "test_verify_demo"
path = "examples/test_verify_demo.rs"

[[example]]
name = "test_verify_integration"
path = "examples/test_verify_integration.rs"

[[example]]
name = "junit_export_example"
path = "examples/junit_export_example.rs"
