[workspace]
members = [
    "crates/bash-eval",
    "crates/editor",
    "crates/json-escape",
    "crates/json-to-yaml",
    "crates/script-cleanup",
    "crates/testcase-models",
    "crates/testcase-cli",
    "crates/testcase-common",
    "crates/testcase-execution",
    "crates/testcase-git",
    "crates/testcase-manager",
    "crates/testcase-orchestration",
    "crates/testcase-storage",
    "crates/testcase-ui",
    "crates/testcase-validation",
    "crates/testcase-verification",
    "crates/test-executor",
    "crates/test-orchestrator",
    "crates/test-run-manager",
    "crates/test-verify",
    "crates/tpdg-compat",
    "crates/validate-json",
    "crates/validate-yaml",
    "crates/verifier",
]
resolver = "2"

[package]
name = "testcase-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
testcase-models = { path = "crates/testcase-models" }
testcase-ui = { path = "crates/testcase-ui" }
testcase-verification = { path = "crates/testcase-verification" }
testcase-storage = { path = "crates/testcase-storage" }
anyhow = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }

[workspace.dependencies]
# Core serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_path_to_error = "*"

# CLI and UI
clap = { version = "4.4", features = ["derive"] }
skim = "0.10"
dialoguer = "0.12.0"
edit = "0.1"

# Error handling and utilities
anyhow = "=1.0.99"
log = "0.4"
env_logger = "0.11"
regex = "1.10"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Data structures
indexmap = { version = "2.1", features = ["serde"] }

# Git integration
git2 = "0.20.3"

# Validation and schemas
jsonschema = "0.17"

# Configuration and environment
dotenvy = "0.15"
toml = "0.9.11"

# File system and I/O
tempfile = "3.8"
notify = "8.2"
walkdir = "2.4"

# XML processing
roxmltree = "0.20"

# Terminal and text processing
strip-ansi-escapes = "0.2"

# HTTP client (dev dependency)
reqwest = { version = "0.11", features = ["blocking"] }

[[example]]
name = "tty_fallback_demo"
path = "examples/tty_fallback_demo.rs"

[[example]]
name = "test_verify_demo"
path = "examples/test_verify_demo.rs"

[[example]]
name = "test_verify_integration"
path = "examples/test_verify_integration.rs"
