[package]
name = "test-run-manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trm"
path = "src/main.rs"

[dependencies]
testcase-storage = { path = "../testcase-storage" }
testcase-ui = { path = "../testcase-ui" }
testcase-models = { path = "../testcase-models" }
clap = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
