[package]
name = "testcase-common"
version = "0.1.0"
edition = "2021"

[dependencies]
testcase-models = { path = "../testcase-models" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
jsonschema = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
