[package]
name = "testcase-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
testcase-models = { path = "../testcase-models" }
testcase-common = { path = "../testcase-common" }
testcase-validation = { path = "../testcase-validation" }
walkdir = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
serde_path_to_error = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
