[package]
name = "testcase-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
testcase-models = { path = "../testcase-models" }
testcase-storage = { path = "../testcase-storage" }
testcase-common = { path = "../testcase-common" }
testcase-verification = { path = "../testcase-verification" }
skim = { workspace = true }
dialoguer = { workspace = true }
edit = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
jsonschema = { workspace = true }
git2 = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
