[package]
name = "validate-yaml"
version = "0.1.0"
edition = "2021"

[lib]
name = "validate_yaml"
path = "src/lib.rs"

[[bin]]
name = "validate-yaml"
path = "src/main.rs"

[dependencies]
testcase-validation = { path = "../testcase-validation" }
testcase-models = { path = "../testcase-models" }
testcase-common = { path = "../testcase-common" }
testcase-manager = { path = "../testcase-manager" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
jsonschema = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
notify = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
